<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_container_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu_royal"
        android:theme="@style/AppToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Nouvelle Réunion"
        app:titleMarginStart="@dimen/activity_add_title_margin"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/room_image"
                android:layout_width="@dimen/activity_add_lamzone_image"
                android:layout_height="@dimen/activity_add_lamzone_image"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:contentDescription="@string/pastille_de_la_salle_de_r_union"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:scrollbarSize="@dimen/activity_add_lamzone_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/room_image" />

            <TextView
                android:id="@+id/error_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/veuillez_choisir_une_salle"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/room_spinner" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subjectLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/add_activity_sideMargin"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:layout_marginEnd="@dimen/add_activity_sideMargin"
                app:layout_constraintTop_toBottomOf="@id/error_spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/objet_de_la_r_union" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dateTimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:text="@string/choisir_la_date_et_l_heure"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textSize="@dimen/item_firstLine_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subjectLyt" />

            <View
                android:id="@+id/underlining"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@id/dateTimeBtn"
                app:layout_constraintStart_toStartOf="@id/dateTimeBtn"
                app:layout_constraintTop_toBottomOf="@id/dateTimeBtn" />

            <TextView
                android:id="@+id/error_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/veuillez_choisir_un_horaire"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTimeBtn" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/participantLyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/add_activity_sideMargin"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:layout_marginEnd="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTimeBtn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/participant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/participants_de_la_r_union"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_add_fab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/bleu_royal"
                android:contentDescription="@string/add"
                android:src="@drawable/add_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@id/participantLyt"
                app:layout_constraintStart_toEndOf="@id/participantLyt"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/participant_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/add_activity_sideMargin"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:layout_marginEnd="@dimen/add_activity_sideMargin"
                android:hint="@string/deux_adresses_mails_valides"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participantLyt" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/add_activity_chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_activity_sideMargin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participant_textview" />

            <TextView
                android:id="@+id/error_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/au_moins_deux_participants"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_activity_chipgroup" />

            <Button
                android:id="@+id/create_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_add_30_margin"
                android:text="@string/enregistrer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_participant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>