<resources>
    <string name="app_name">MaReu1</string>
    <string name="reinitialiser_label">réinitialiser</string>
    <string name="annuler_label">Annuler</string>
    <string name="filtrer_par_salle">Filtrer par salle</string>
    <string name="Mario">Mario</string>
    <string name="Peach">Peach</string>
    <string name="Luigi">Luigi</string>
    <string name="Daisy">Daisy</string>
    <string name="Toad">Toad</string>
    <string name="DK">Donkey-Kong</string>
    <string name="koopa">Koopa</string>
...
